--- a/people.html
+++ b/people.html
@@ -206,6 +206,13 @@ window.onload = function () {
     		<p class="text">Navneet Shahi<br>Biochemical Engineering<br></p>
     	</div>
     </div>
+    <div class="hexagon" style="float:left; background-image: url(img/Bardia.jpg);">
+      <div class="hexTop"></div>
+      <div class="hexBottom"></div>
+        <div class="box">
+    		<p class="text">Bardia Ghayoumi <br>Biochemistry<br></p>
+    	</div>
+    </div>
 
 </div>
 
