--- a/index.html
+++ b/index.html
@@ -78,8 +78,21 @@
         Office:<br>
         <a href="https://www.google.com/maps/dir/Current+Location/38.5340370,-121.7644113">Tupper Hall 2215</a><br>
         Phone 530-752-4440<br>
-FAX 530-752-7710</p>
+FAX 530-752-7710<br>
+        Lab:<br>
+        <a href="https://www.google.com/maps/dir/Current+Location/38.5340370,-121.7644113">Tupper Hall 2222</a><br>
+	</p>
       </div>
+
+      <div id="banner">
+        <h3>Integrative Cardiac Dynamics</h3>
+        <p>
+        Location: UCSB, KITP<br>
+        Date: Jun 25, 2018 - Jul 20, 2018<br>
+        <a href="https://www.kitp.ucsb.edu/activities/cardio18"><img src="https://www.kitp.ucsb.edu/sites/default/files/kitp/logos/cardio18-thumb.jpg" width="100%"></a></p>
+      </div>
+
+
       
     </div>
     <!-- aside end -->
