--- a/people.html
+++ b/people.html
@@ -198,7 +198,7 @@ window.onload = function () {
 
 
 
-<div style="width:450px;height:150px;margin: 0 auto; auto;clear: both;position: relative; top: -70px; left: 150px;">
+<div style="width:450px;height:150px;margin: 0 auto; auto;clear: both;position: relative; top: -70px; left: 0px;">
     <div class="hexagon" style="float:left; background-image: url(img/Nina.png);">
       <div class="hexTop"></div>
       <div class="hexBottom"></div>
@@ -210,7 +210,14 @@ window.onload = function () {
       <div class="hexTop"></div>
       <div class="hexBottom"></div>
         <div class="box">
-    		<p class="text">Bardia Ghayoumi <br>Biochemistry<br></p>
+    		<p class="text">Bardia Ghayoumi<br>Biochemistry<br></p>
+    	</div>
+    </div>
+    <div class="hexagon" style="float:left; background-image: url(img/Mike.jpg);">
+      <div class="hexTop"></div>
+      <div class="hexBottom"></div>
+        <div class="box">
+    		<p class="text">Mikhail Meller<br>Biomedical Engineering <br></p>
     	</div>
     </div>
 
