--- a/main.html
+++ b/main.html
@@ -30,7 +30,7 @@ window.onload = function () {
         <!-- toppage -->
         <div id="toppage">
           <div id="toppage-text">
-            <p class="large">Sudden cardiac death is the leading cause of death in the United States. Our knowledge of sudden cardiac death is still limited.  CAST (Cardiac Arrhythmia Suppression Trial) and SWORD (Survival With Oral d-Sotalol) clinical trials failed and tested drugs increased mortality.  These single target drugs often cause unpredicted phenomena in the heart, which is the highly complex system. The complexities come from nonlinearities in the heart. The goal of my research is to understand how molecular level properties are linked to organ level phenomena using mathematical analysis and multiscale modeling of the heart. </p>
+            <p class="large">Sudden cardiac death is the leading cause of death in the United States. Our knowledge of sudden cardiac death is still limited.  CAST (Cardiac Arrhythmia Suppression Trial) and SWORD (Survival With Oral d-Sotalol) clinical trials failed, and tested drugs increased mortality.  These single target drugs often cause unpredicted phenomena in the heart, which is the highly complex system. The complexities come from nonlinearities in the heart. The goal of my research is to understand how molecular level properties are linked to organ level phenomena using mathematical analysis and multiscale modeling of the heart. </p>
           </div>
           <div id="toppage-news">
             <h3><span class="elem">Information</span></h3>
