--- a/people.html
+++ b/people.html
@@ -171,6 +171,14 @@ window.onload = function () {
 
 
 <div style="width:450px;height:150px;margin: 0 auto; auto;clear: both;position: relative; top: -35px; left: 75px;">
+    <div class="hexagon" style="float:left; background-image: url(img/Fernando.jpg);">
+      <div class="hexTop"></div>
+      <div class="hexBottom"></div>
+            <div class="box">
+            <p class="text">Fernando Espinosa<br>Cognitive Science, Statistics<br></p>
+          </div>
+    </div>
+    
     <div class="hexagon" style="float:left; background-image: url(img/Kim.jpg);">
       <div class="hexTop"></div>
       <div class="hexBottom"></div>
