--- a/people.html
+++ b/people.html
@@ -167,6 +167,14 @@ window.onload = function () {
     		<p class="text">Priscilla Chan<br>Biomedical Engineering<br></p>
     	</div>
     </div>
+
+    <div class="hexagon" style="float:left; background-image: url(img/Sarah.png);">
+      <div class="hexTop"></div>
+      <div class="hexBottom"></div>
+        <div class="box">
+        <p class="text">Sarah Brashear<br>Applied Mathematics<br></p>
+      </div>
+    </div>
 </div>
 
 
