--- a/people.html
+++ b/people.html
@@ -142,7 +142,23 @@ window.onload = function () {
 	<p>Daisuke Sato, Ph.D. (PI)</p>
 </div>
 
+<div style= "width:450px;height:150px;margin: 0 auto;">
+    <div class="hexagon" style="float:left; background-image: url(img/Sarah.png);">
+      <div class="hexTop"></div>
+      <div class="hexBottom"></div>
+        <div class="box">
+        <p class="text">Sarah Brashear<br>Applied Mathematics<br></p>
+      </div>
+    </div>
 
+    <div class="hexagon" style="float:left; background-image: url(img/Fernando.jpg);">
+      <div class="hexTop"></div>
+      <div class="hexBottom"></div>
+            <div class="box">
+            <p class="text">Fernando Espinosa<br>Cognitive Science, Statistics<br></p>
+          </div>
+    </div>
+</div>
 <div style= "width:450px;height:150px;margin: 0 auto;">
     <div class="hexagon" style="float:left; background-image: url(img/Rosaline.JPG);">
       <div class="hexTop"></div>
@@ -168,25 +184,10 @@ window.onload = function () {
     	</div>
     </div>
 
-    <div class="hexagon" style="float:left; background-image: url(img/Sarah.png);">
-      <div class="hexTop"></div>
-      <div class="hexBottom"></div>
-        <div class="box">
-        <p class="text">Sarah Brashear<br>Applied Mathematics<br></p>
-      </div>
-    </div>
 </div>
 
 
-<div style="width:450px;height:150px;margin: 0 auto; auto;clear: both;position: relative; top: -35px; left: 75px;">
-    <div class="hexagon" style="float:left; background-image: url(img/Fernando.jpg);">
-      <div class="hexTop"></div>
-      <div class="hexBottom"></div>
-            <div class="box">
-            <p class="text">Fernando Espinosa<br>Cognitive Science, Statistics<br></p>
-          </div>
-    </div>
-    
+<div style="width:450px;height:150px;margin: 0 auto; auto;clear: both;position: relative; top: -35px; left: 75px;">    
     <div class="hexagon" style="float:left; background-image: url(img/Kim.jpg);">
       <div class="hexTop"></div>
       <div class="hexBottom"></div>
@@ -238,6 +239,7 @@ window.onload = function () {
     </div>
 
 </div>
+
 
 
 
