--- a/people.html
+++ b/people.html
@@ -159,7 +159,7 @@ window.onload = function () {
           </div>
     </div>
 </div>
-<div style= "width:450px;height:150px;margin: 0 auto;">
+<div style= "width:450px;height:150px;margin: 0 auto;auto;clear: both;position: relative; top: -47px; left: 0px;">
     <div class="hexagon" style="float:left; background-image: url(img/Rosaline.JPG);">
       <div class="hexTop"></div>
       <div class="hexBottom"></div>
@@ -187,7 +187,14 @@ window.onload = function () {
 </div>
 
 
-<div style="width:450px;height:150px;margin: 0 auto; auto;clear: both;position: relative; top: -35px; left: 75px;">    
+<div style="wwidth:450px;height:150px;margin: 0 auto; auto;clear: both;position: relative; top: -90px; left: 75px;">    
+    <div class="hexagon" style="float:left; background-image: url(img/Bardia.jpg);">
+      <div class="hexTop"></div>
+      <div class="hexBottom"></div>
+        <div class="box">
+        <p class="text">Bardia Ghayoumi<br>Biochemistry<br></p>
+      </div>
+    </div>
     <div class="hexagon" style="float:left; background-image: url(img/Kim.jpg);">
       <div class="hexTop"></div>
       <div class="hexBottom"></div>
@@ -221,13 +228,6 @@ window.onload = function () {
       <div class="hexBottom"></div>
         <div class="box">
     		<p class="text">Navneet Shahi<br>Biochemical Engineering<br></p>
-    	</div>
-    </div>
-    <div class="hexagon" style="float:left; background-image: url(img/Bardia.jpg);">
-      <div class="hexTop"></div>
-      <div class="hexBottom"></div>
-        <div class="box">
-    		<p class="text">Bardia Ghayoumi<br>Biochemistry<br></p>
     	</div>
     </div>
     <div class="hexagon" style="float:left; background-image: url(img/Mike.jpg);">
