--- a/people.html
+++ b/people.html
@@ -187,7 +187,7 @@ window.onload = function () {
 </div>
 
 
-<div style="wwidth:450px;height:150px;margin: 0 auto; auto;clear: both;position: relative; top: -90px; left: 75px;">    
+<div style="width:450px;height:150px;margin: 0 auto; auto;clear: both;position: relative; top: -90px; left: 75px;">    
     <div class="hexagon" style="float:left; background-image: url(img/Bardia.jpg);">
       <div class="hexTop"></div>
       <div class="hexBottom"></div>
