--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   <!-- header -->
   <div id="body-header">
     <div id="body-headerMain">
-      <div style="float:left;"><a href="http://www.ucdavis.edu/" style="color:#002855;text-decoration:none" >University of California, Davis</a></div>
-      <div style="float:right;"><a href="http://www.ucdmc.ucdavis.edu/welcome/" style="color:#002855;text-decoration:none">School of Medicine</a></div>
-      <div style="float:center;"><a href="http://www.ucdmc.ucdavis.edu/pharmacology/" style="color:#002855;text-decoration:none">Pharmacology</a></div>
+      <div style="float:left;"><a href="http://www.ucdavis.edu/" style="color:#002855;text-decoration:none"><strong>University of California, Davis</strong></a></div>
+      <div style="float:right;"><a href="http://www.ucdmc.ucdavis.edu/welcome/" style="color:#002855;text-decoration:none"><strong>School of Medicine</strong></a></div>
+      <div style="float:center;"><a href="http://www.ucdmc.ucdavis.edu/pharmacology/" style="color:#002855;text-decoration:none"><strong>Pharmacology</strong></a></div>
     </div>
     <div id="body-headerLogo"><a href="index.html">Sato Lab</a></div>
   </div>
