--- a/people.html
+++ b/people.html
@@ -187,7 +187,7 @@ window.onload = function () {
 </div>
 
 
-<div style="width:450px;height:150px;margin: 0 auto; auto;clear: both;position: relative; top: -90px; left: 75px;">    
+<div style="width:450px;height:150px;margin: 0 auto; auto;clear: both;position: relative; top: -110px; left: -75px;">    
     <div class="hexagon" style="float:left; background-image: url(img/Bardia.jpg);">
       <div class="hexTop"></div>
       <div class="hexBottom"></div>
@@ -211,7 +211,7 @@ window.onload = function () {
         	</div>
     </div>
 
-    <div class="hexagon" style="float:left; background-image: url(img/Tam.JPG);">
+    <div class="hexagon" style="top:45px; left:450px; background-image: url(img/Tam.JPG);">
       <div class="hexTop"></div>
       <div class="hexBottom"></div>
             <div class="box">
@@ -220,9 +220,7 @@ window.onload = function () {
     </div>
 </div>
 
-
-
-<div style="width:450px;height:150px;margin: 0 auto; auto;clear: both;position: relative; top: -70px; left: 0px;">
+<div style="width:450px;height:150px;margin: 0 auto; auto;clear: both;position: relative; top: -153px; left: 0px;">
     <div class="hexagon" style="float:left; background-image: url(img/Nina.png);">
       <div class="hexTop"></div>
       <div class="hexBottom"></div>
@@ -237,7 +235,13 @@ window.onload = function () {
     		<p class="text">Mikhail Meller<br>Biomedical Engineering <br></p>
     	</div>
     </div>
-
+    <div class="hexagon" style="float:left; background-image: none;">
+      <div class="hexTop"></div>
+      <div class="hexBottom"></div>
+        <div class="box">
+        <p class="text">Jessica Au<br>Applied Math <br></p>
+      </div>
+    </div>
 </div>
 
 
