changed direction to location

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <li><a href="people.html" target="mainframe"><span class="elem">People</span></a>
         <li><a href="https://www.ncbi.nlm.nih.gov/sites/myncbi/d.sato.1/bibliography/9094099/public/?sort=date&direction=descending" target="_top"><span class="elem">Publications</span></a>
         <li><a href="gallery.html" target="mainframe"><span class="elem">Gallery</span></a>
-        <li><a href="direction.html" target="mainframe"><span class="elem">Direction</span></a>
+        <li><a href="direction.html" target="mainframe"><span class="elem">Location</span></a>
       </ul>
     </div>
     <!-- navi end -->
