--- a/gallery.html
+++ b/gallery.html
@@ -8,7 +8,48 @@
 <style type="text/css">
 <!--
 
+.photo-show { 
+    height: 300px; 
+    max-width: 100%;
+    position: relative;
+    width: 300px;
+    margin: 0 auto;
+}
 
+
+.photo-show img { 
+    animation: show 10s infinite;
+    border-radius: 50%;
+    height: auto;
+    max-width: 100%;
+    opacity: 0;
+    position: absolute; 
+}
+
+@keyframes show {
+    0% {opacity:0}
+    10% {opacity:1}
+    40% {opacity:1}
+    50% {opacity:0}
+ }
+
+
+.photo-show img {
+    transition: 0.2s;
+}
+
+.photo-show:hover img {
+    animation-play-state: paused;
+    border-radius: 0;
+}
+
+.photo-show img:nth-of-type(1) {
+    animation-delay: 0s;
+}
+
+.photo-show img:nth-of-type(2) {
+    animation-delay: 5s;
+}
 
 //-->
 </style>
@@ -33,6 +74,18 @@ window.onload = function () {
 Your browser does not support the video tag.
 </video>
 
+
+
+
+<h1 align="center">High Performance Computing Cluster</h1>
+
+<p> Our HPC cluster has 1 head node + 24 compute nodes.</p>
+
+
+<div align="left" class="photo-show">
+    <img src="img/facility1.jpg" width=300 >
+    <img src="img/facility2.jpg" width=300>
+</div>
 
 </body>
 </html>
