--- a/gallery.html
+++ b/gallery.html
@@ -74,6 +74,14 @@ window.onload = function () {
 Your browser does not support the video tag.
 </video>
 
+<h1 align="center">Weekly Lab Meeting</h1>
+
+
+
+<div align="center">
+    <img src="img/labmeeting1.jpg" width="100%" >
+</div>
+
 
 
 
@@ -86,6 +94,7 @@ Your browser does not support the video tag.
     <img src="img/facility1.jpg" width=300 >
     <img src="img/facility2.jpg" width=300>
 </div>
+
 
 </body>
 </html>
