--- a/people.html
+++ b/people.html
@@ -158,8 +158,15 @@ window.onload = function () {
             <p class="text">Fernando Espinosa<br>Cognitive Science, Statistics<br></p>
           </div>
     </div>
+    <div class="hexagon" style="float:left; background-image: url(img/Bardia.jpg);">
+      <div class="hexTop"></div>
+      <div class="hexBottom"></div>
+        <div class="box">
+        <p class="text">Bardia Ghayoumi<br>Biochemistry<br></p>
+      </div>
+    </div>
 </div>
-<div style= "width:450px;height:150px;margin: 0 auto;auto;clear: both;position: relative; top: -47px; left: 0px;">
+<div style= "width:450px;height:150px;margin: 0 auto;auto;clear: both;position: relative; top: -48px; left: 0px;">
     <div class="hexagon" style="float:left; background-image: url(img/Rosaline.JPG);">
       <div class="hexTop"></div>
       <div class="hexBottom"></div>
@@ -187,14 +194,7 @@ window.onload = function () {
 </div>
 
 
-<div style="width:450px;height:150px;margin: 0 auto; auto;clear: both;position: relative; top: -110px; left: -75px;">    
-    <div class="hexagon" style="float:left; background-image: url(img/Bardia.jpg);">
-      <div class="hexTop"></div>
-      <div class="hexBottom"></div>
-        <div class="box">
-        <p class="text">Bardia Ghayoumi<br>Biochemistry<br></p>
-      </div>
-    </div>
+<div style="width:450px;height:150px;margin: 0 auto; auto;clear: both;position: relative; top: -91px; left: 75px;">    
     <div class="hexagon" style="float:left; background-image: url(img/Kim.jpg);">
       <div class="hexTop"></div>
       <div class="hexBottom"></div>
@@ -211,7 +211,7 @@ window.onload = function () {
         	</div>
     </div>
 
-    <div class="hexagon" style="top:45px; left:450px; background-image: url(img/Tam.JPG);">
+    <div class="hexagon" style="float:left; background-image: url(img/Tam.JPG);">
       <div class="hexTop"></div>
       <div class="hexBottom"></div>
             <div class="box">
@@ -220,7 +220,7 @@ window.onload = function () {
     </div>
 </div>
 
-<div style="width:450px;height:150px;margin: 0 auto; auto;clear: both;position: relative; top: -153px; left: 0px;">
+<div style="width:450px;height:150px;margin: 0 auto; auto;clear: both;position: relative; top: -134px; left: 0px;">
     <div class="hexagon" style="float:left; background-image: url(img/Nina.png);">
       <div class="hexTop"></div>
       <div class="hexBottom"></div>
