--- a/research.html
+++ b/research.html
@@ -28,7 +28,7 @@ window.onload = function () {
 
 
 <h2>Cardiac alternans</h2>
-<p>Cardiac alternans, especially spatially discordant alternans (SDA) is arrhythmogenic since it can induce spatial heterogeneity of refractoriness, which can cause wavebreak and reentry. However, the underlying mechanisms are not fully understood.  We have identified several novel mechanisms for alternans at the single cell level and the tissue level.  In our papers (1-10) we have focused on the Ca cycling and shown the role of the intracellular Ca cycling in the formation of alternans.  We identified a novel mechanism for SDA formation which is based on the cell-to-cell variability of Ca cycling within cells in cardiac tissue. The SDA patterns are formed by two competitive factors; stochastic noise (desynchronize) and diffusion (synchronize). We argue that this mechanism is clinically relevant and may underlie experimentally observed patterns of SDA. We also investigated how isoproterenol (ISO) application induces transient alternans. Arrhythmogenic alternans occurs during the transition between stable steady states.  We pointed that the assessment of antiarrhythmic drug efficacy could be wrong if the transient dynamics are ignored. Therefore, a drug that is antiarrhythmic at steady state may be proarrhythmic during the transition. These results provide a novel mechanism for B-adrenergic agonists induced-arrhythmias.</p>
+<p>Cardiac alternans, especially spatially discordant alternans (SDA) is arrhythmogenic since it can induce spatial heterogeneity of refractoriness, which can cause wavebreak and reentry. However, the underlying mechanisms are not fully understood.  We have identified several novel mechanisms for alternans at the single cell level and the tissue level.  We have focused on the Ca cycling and shown the role of the intracellular Ca cycling in the formation of alternans.  We identified a novel mechanism for SDA formation which is based on the cell-to-cell variability of Ca cycling within cells in cardiac tissue. The SDA patterns are formed by two competitive factors; stochastic noise (desynchronize) and diffusion (synchronize). We argue that this mechanism is clinically relevant and may underlie experimentally observed patterns of SDA. We also investigated how isoproterenol (ISO) application induces transient alternans. Arrhythmogenic alternans occurs during the transition between stable steady states.  We pointed that the assessment of antiarrhythmic drug efficacy could be wrong if the transient dynamics are ignored. Therefore, a drug that is antiarrhythmic at steady state may be proarrhythmic during the transition. These results provide a novel mechanism for B-adrenergic agonists induced-arrhythmias.</p>
 
 
 
@@ -44,7 +44,7 @@ window.onload = function () {
 <p>We have also developed techniques to accelerate the whole heart simulations with general-purpose computing on graphics processing units (GPGPU).  Nowadays, this technique is widely used to simulate not only the whole heart but also the subcellular calcium (Ca) cycling and signaling pathways. Improvement of simulation speed and efficiency will make it possible for us not only to use modeling and simulation approaches for understanding the mechanisms of arrhythmias but also to develop patient-specific computer aided therapy, treatment, and surgery.</p>
 
 <h2>Device Development</h2>
-
+<h3>(Coming soon!!)</h3>
 
 
 </body>
