--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="format-detection" content="telephone=no">
 <meta name="rating" content="general">
+
 <title>Sato Lab - UC Davis School of Medicine</title>
 
 <link rel="stylesheet" href="main.css" type="text/css">
+<link rel="icon" type="image/png" href="favicon.png">
 
 
 
