--- a/main.html
+++ b/main.html
@@ -30,18 +30,14 @@ window.onload = function () {
         <!-- toppage -->
         <div id="toppage">
           <div id="toppage-text">
-            <p class="large">Sudden cardiac death is the leading cause of death in the United States. Our knowledge of sudden cardiac death is still limited.  CAST (Cardiac Arrhythmia Suppression Trial) and SWORD (Survival With Oral d-Sotalol) clinical trials failed, and tested drugs increased mortality.  These single target drugs often cause unpredicted phenomena in the heart, which is the highly complex system. The complexities come from nonlinearities in the heart. The goal of my research is to understand how molecular level properties are linked to organ level phenomena using mathematical analysis and multiscale modeling of the heart. </p>
-          </div>
-          <div id="toppage-news">
-            <h3><span class="elem">Information</span></h3>
-            <ul>
-              <li>
-              <h4>Office Hours updated</h4>
-              Office hours were updated (9/1/2017)
-              <li>
-              <h4>Web site updated</h4>
-              Sato lab web site was updated (9/1/2017)
-            </ul>
+            <h1 style="text-align:center;">Our $64,000 Questions</h1>
+            <p class="large" style="color:black;">In our lab, we are solving the following questions from scientific and engineering viewpoints. </p>
+            <h2>How to design/create synthetic life form from scratch?</h2>
+            <p class="large">Current technologies do now allow us to create/design even a single ion channel. </p>
+            <h2>How to create artificial emotion/volition?</h2>
+            <p class="large">Our brain is comprised of intellect, emotion, and volition. Can we integrate emotion and volition into the artificial intelligence?</p>
+            <h2>Differential equations vs Boolean description</h2>
+            <p class="large">Which one is more fundamental to describe the universe? Differential equations are OK to describe spherical cows but not easy to describe complex/heterogeneous/multiscale systems.</p>
           </div>
         </div>
         <!-- toppage end -->
