--- a/people.html
+++ b/people.html
@@ -235,11 +235,11 @@ window.onload = function () {
     		<p class="text">Mikhail Meller<br>Biomedical Engineering <br></p>
     	</div>
     </div>
-    <div class="hexagon" style="float:left; background-image: none;">
+    <div class="hexagon" style="float:left; background-image: url(img/Jessica.jpg);">
       <div class="hexTop"></div>
       <div class="hexBottom"></div>
         <div class="box">
-        <p class="text">Jessica Au<br>Applied Math <br></p>
+        <p class="text">Jessica Au<br>Mathematics and Scientific Computation <br></p>
       </div>
     </div>
 </div>
