Minor reformat. Changed spacing, font, and Nav bar.

--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 <link rel="icon" type="image/png" href="favicon.png">
 
 
-
-
 </head>
 
 <body>
+
+</br>
+
 <!-- container -->
 <div id="body-container">
   <!-- header -->
@@ -48,12 +49,12 @@
     <!-- navi -->
     <div id="body-nav">
       <ul>
-        <li><a href="main.html" target="mainframe"><span class="elem">Top Page</span></a>
-        <li><a href="research.html" target="mainframe"><span class="elem">Research</span></a>
-        <li><a href="people.html" target="mainframe"><span class="elem">People</span></a>
-        <li><a href="https://www.ncbi.nlm.nih.gov/sites/myncbi/d.sato.1/bibliography/9094099/public/?sort=date&direction=descending" target="_top"><span class="elem">Publications</span></a>
-        <li><a href="gallery.html" target="mainframe"><span class="elem">Gallery</span></a>
-        <li><a href="direction.html" target="mainframe"><span class="elem">Location</span></a>
+        <li><a href="main.html" target="mainframe"><span class="elem">Top Page</span></a></li>
+        <li><a href="research.html" target="mainframe"><span class="elem">Research</span></a></li>
+        <li><a href="people.html" target="mainframe"><span class="elem">People</span></a></li>
+        <li><a href="https://www.ncbi.nlm.nih.gov/sites/myncbi/d.sato.1/bibliography/9094099/public/?sort=date&direction=descending" target="_top"><span class="elem">Publications</span></a></li>
+        <li><a href="gallery.html" target="mainframe"><span class="elem">Gallery</span></a></li>
+        <li><a href="direction.html" target="mainframe"><span class="elem">Location</span></a></li>
       </ul>
     </div>
     <!-- navi end -->
@@ -104,7 +105,7 @@ FAX 530-752-7710<br>
   <!-- inner end --><!-- footer -->
   <div id="body-footer">
     <div id="body-footerMain">
-      <p>copyright&copy;2017 Sato Lab all rights reserved.</p>
+      <p>copyright &copy;2019 Sato Lab all rights reserved.</p>
     </div>
   </div>
   <!-- footer end -->
